Can filter boards, can go to board detail view page

--- a/frontend/kudos-board-app/src/CreateModals/CreateModals.css
+++ b/frontend/kudos-board-app/src/CreateModals/CreateModals.css
@@ -68,7 +68,7 @@
     height: 30px;
 }
 
-.modal-input-create-button {
+.modal-input-button {
     margin-top: 60px;
     width: 80%;
     height: 50px;
