--- a/frontend/kudos-board-app/src/App.css
+++ b/frontend/kudos-board-app/src/App.css
@@ -1,15 +1,18 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+#root {
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
+  height: 100%;
   text-align: center;
-} */
+  min-width: 100vw;
+  min-height: 100vh;
+}
 
 .App {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   align-items: center;
 }
 
@@ -23,4 +26,5 @@ footer {
   width: 100%;
   text-align: center;
   margin-top: auto;
+  padding: 30px;
 }
