--- a/frontend/kudos-board-app/src/BoardList/BoardList.css
+++ b/frontend/kudos-board-app/src/BoardList/BoardList.css
@@ -2,5 +2,7 @@
     display:flex;
     flex-direction: row;
     width: 100%;
-    
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
 }
