--- a/client/kudos-board-app/src/Comment/Comment.css
+++ b/client/kudos-board-app/src/Comment/Comment.css
@@ -2,5 +2,10 @@
     display: flex;
     flex-direction: column;
     gap: 2px;
-    border: 2px solid black;
+    border: 2px solid var(--text-color);
+    border-radius: 9px;
+}
+
+.comment-author {
+    font-size: 20px;
 }
