--- a/client/kudos-board-app/src/SearchBar/SearchBar.css
+++ b/client/kudos-board-app/src/SearchBar/SearchBar.css
@@ -2,4 +2,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 5px;
+    gap: 15px;
+}
+
+.searchbar-searchbar {
+    width: 50%;
 }
