--- a/client/kudos-board-app/src/Modal/Modal.css
+++ b/client/kudos-board-app/src/Modal/Modal.css
@@ -17,7 +17,7 @@
     top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 1px solid black;
+    border: 1px solid var(--text-color);
     width: 70%;
     min-width: 60vw;
     max-width: 100%;
@@ -43,7 +43,7 @@
     margin-top: 10px;
     margin-right: 10px;
     border-radius: 9px;
-    color: black;
+    color: var(--text-color);
     transition: 0.2s;
     display: flex;
     justify-content: center;
